--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,4 @@ Pods/
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
-fastlane/test_output
+fastlane/test_output.DS_Store
